[Sync] FaviconCache: Remove entries from page_favicon_map_ when synced favicon is freed

The problem is that entries are never removed from page_favicon_map_ and
therefore accumulate in memory. page_favicon_map_is used to map page url to
favicon url before accessing favicon in synced_favicons_. It is not really
needed if there is no entry in synced_favicons_.

In this change I'm erasing entries from page_favicon_map_ whose value matches
favicon url.

BUG=732969
R=zea@chromium.org

Change-Id: I9d9deb74d083b07c026ba2e1a4fa86ef3137ef92
Reviewed-on: https://chromium-review.googlesource.com/537114
Reviewed-by: Nicolas Zea <zea@chromium.org>
Commit-Queue: Pavel Yatsuk <pavely@chromium.org>
Cr-Commit-Position: refs/heads/master@{#480681}